force-app/main/default/objects/Contact/fields/Household_Role__c.field-meta.xml
<CustomField>
    <fullName>Household_Role__c</fullName>
    <description>Role of this adult in the household. Children live in Minor__c.</description>
    <label>Household Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Guardian</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>