force-app/main/default/objects/Contact/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Derived provenance: Square when the contact carries a Square customer id.</description>
    <formula>IF(ISBLANK(Square_Id__c), "Salesforce", "Square")</formula>
    <label>Source System</label>
    <type>Text</type>
</CustomField>