force-app/main/default/objects/Contact/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>Derived deep link to the Square customer. Blank for Salesforce-native contacts (record URL is the source).</description>
    <formula>IF(ISBLANK(Square_Id__c), "", "https://app.squareup.com/dashboard/customers/directory/customer/" &amp; Square_Id__c)</formula>
    <label>Source URL</label>
    <type>Text</type>
</CustomField>